[package]
name = "presetable"
version = "0.1.0"
authors = ["Quixaq <quixaq@tutamail.com>"]
description = "A tool for command alias presets"
repository = "https://github.com/quixaq/presetable"
license = "GPL-3.0-or-later"
keywords = ["cli", "presets", "runner", "alias", "automation"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"]}
directories = "6.0.0"
duct = "1.1.1"
inquire = "0.9.4"
serde = { version = "1.0.228", features = ["derive"]}
toml = "1.1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
